GNU cpio NEWS -- history of user-visible changes. 2009-07-31
Copyright (C) 2003, 2004, 2005, 2006, 2007, 2009 Free Software Foundation, Inc.
See the end of file for copying conditions.

Please send cpio bug reports to <bug-cpio@gnu.org>.

Version 2.10.90 (Git)

* Fix mt build.


Version 2.10 - Sergey Poznyakoff, 2009-06-20

* Ensure record headers are properly packed (fix builds on ARM).
* Fix exit codes to reliably indicate success or failure of the operation.
* Fix large file support.
* Support MinGW builds (thanks to Robert Millan).
* Minor bugfixes.


Version 2.9 - Sergey Poznyakoff, 2007-06-28

* Licensed under the GPLv3.

* Bugfixes:
** Honor umask when creating intermediate directories, not specified
in the archive (debian bug #430053)


Version 2.8 - Sergey Poznyakoff, 2007-06-08

* Option --owner can be used in copy-out mode, allowing to uniformly override
ownership of the files being added to the archive.

* Bugfixes:

** Symlinks were handled incorrectly in copy-out mode.
** Fix handling of large files.
** Fix setting the file permissions in copy-out mode.
** Fix CAN-2005-1111


Version 2.7 - Sergey Poznyakoff, 2006-10-21

* Improved error checking and diagnostics

* Bugfixes
** Fixed CAN-1999-1572
** Allow to use --sparse in both copy-in and copy-pass.
** Fix bug that eventually caused copying out the same hard-linked
file several times to archive.
** Fix several LFS-related issues.
** Fix Debian bug 335580.


Version 2.6 - Sergey Poznyakoff, 2004-12-20

* Added NLS support

* Improved configure script

* Improved invocation consistency checking and help output

* Printing warning about truncation of inode numbers is suppressed by
default. See below.

* New option --warning (-W) controls the level of output warnings:

    -Wnone       Disables all warnings
    -Wtruncate   Enable warning about truncation of the inode number
    -Wall        Enables all warnings

  To disable a particular warning, prefix its name with 'no-', just
  like in gcc.
