@@ -1,0 +1,44 @@
+# Process this file with autom4te to create testsuite.  -*- Autotest -*-
+# Copyright (C) 2009 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+AT_SETUP([delayed setstat (with -depth)])
+AT_KEYWORDS([setstat setstat01])
+
+# Cpio versions up to 2.10 failed to restore directory permissions, if
+# the directory was already present on dist (e.g. when using find . -depth).
+#
+# References:
+#   <20090620185721.GA18708@scru.org>
+#   http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=458079
+
+AT_CHECK([
+mkdir dir
+echo "test file" > file
+chmod 500 dir
+
+find dir -depth | cpio -o --quiet > archive
+mv dir old
+
+cpio -i --quiet < archive
+genfile --stat=mode.777 dir
+],
+[0],
+[500
+])
+
+AT_CLEANUP
+
+
