@@ -32,3 +32,6 @@ m4_include([version.at])
 m4_include([inout.at])
 m4_include([symlink.at])
 m4_include([interdir.at])
+
+m4_include([setstat01.at])
+m4_include([setstat02.at])
